# hogwarts-apitest-2

./: .travis.yml  README.md  pyproject.toml
tests/: test_core.py
