[tool.poetry]
name = "hogwarts-apitest"
version = "0.1.0"
description = ""
authors = ["ying.wang1 <ying.wang1@capitalonline.net>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.5"
pytest = "^5.3.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
